[package]
version = "0.1.0"
name = "matching-seed"
authors = ["akfarrington"]
description = "a simple guessing matching game using seed-rs"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
ulid = "0.4.1"
image = {version = "0.23.14", default-features = false, features = ["jpeg", "png", "gif"]}
base64 = "0.13.0"
rand = "0.8.4"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
